--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,52 @@
+# Info
+info.app.:
+  name: School Applicaion
+  description: This is my first spring boot application
+  version: 1.0.0
+
 #mongodb
 spring.data.mongodb:
   host: localhost
   port: 27018
   database: profclub-school
-security:
-  user:
-    name: hovhannisyan.arthur@hotmail.com
-    password: 123456
-management.security.role: ADMIN
 #logging
 logging.level:
-  springframework: WARN
+  springframework: DEBUG
   hibernate: WARN
   net.sf.ehcache: DEBUG
+
+# THYMELEAF (ThymeleafAutoConfiguration)
+spring.thymeleaf:
+  cache: true # Enable template caching.
+  check-template: true # Check that the template exists before rendering it.
+  check-template-location: true # Check that the templates location exists.
+  enabled: true # Enable MVC Thymeleaf view resolution.
+  encoding: UTF-8 # Template encoding.
+  excluded-view-names:  # Comma-separated list of view names that should be excluded from resolution.
+  mode: HTML5 # Template mode to be applied to templates. See also StandardTemplateModeHandlers.
+  prefix: classpath:/templates/ # Prefix that gets prepended to view names when building a URL.
+  suffix: .html # Suffix that gets appended to view names when building a URL.
+  template-resolver-order:  # Order of the template resolver in the chain.
+  view-names: # Comma-separated list of view names that can be resolved.
+
+
+spring.mvc.static-path-pattern: /resources/**
+spring.resources:
+  chain.strategy.content:
+    enabled: true
+    paths: /**
+
+# Test Only
+endpoints:
+  metrics:
+    id: springmetrics
+    sensitive: false
+    enabled: true
+  health:
+    id: springhealth
+    sensitive: false
+    enabled: true
+  actuator:
+    id: springactuator
+    sensitive: false
+    enabled: true
